--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "https://github.com/hbpoon/hbpoon.github.io"              # your host, for 
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
-future: true
+future: false
 
 # SNS settings
 RSS: false
@@ -23,7 +23,7 @@ highlighter: rouge
 permalink: pretty
 paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
-anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+anchorjs: false                          # if you want to customize anchor. check out line:181 of `post.html`
 
 
 
