--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "hux-blog",
-    "title": "Hux Blog",
+    "name": "hb-blog",
+    "title": "HB Blog",
     "author": "Hux <huxpro@gmail.com>",
     "version": "1.7.0",
     "homepage": "http://huxpro.github.io",
     "repository": {
         "type": "git",
-        "url": "https://github.com/Huxpro/huxpro.github.io"
+        "url": "https://github.com/hbpoon/hbpoon.github.io"
     },
     "bugs": "https://github.com/Huxpro/huxpro.github.io/issues",
     "devDependencies": {
