--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hux Blog",
+  "name": "HB Blog",
   "short_name": "Hux Blog",
   "description": "About an engineer & designer who loves web.",
   "icons": [{
