--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "HB Blog",
-  "short_name": "Hux Blog",
+  "short_name": "HB Blog",
   "description": "About an engineer & designer who loves web.",
   "icons": [{
     "src": "icons/128.png",
