--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "HB Blog",
     "author": "Hux <huxpro@gmail.com>",
     "version": "1.7.0",
-    "homepage": "http://huxpro.github.io",
+    "homepage": "https://github.com/hbpoon/hbpoon.github.io",
     "repository": {
         "type": "git",
         "url": "https://github.com/hbpoon/hbpoon.github.io"
