--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "Wechat",
-        href: "https://94pan.github.io/wechat"
+        title: "Bilibili",
+        href: "https://space.bilibili.com/14706181/#/video"
     },{
         title: "NetEase Music",
         href: "https://music.163.com/#/playlist?id=517171111/"
@@ -94,5 +94,8 @@ friends: [
     },{
         title: "Instagram",
         href: "https://www.instagram.com/94pan/"
+    },{
+        title: "Wechat",
+        href: "http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg/"
     }
 ]
