--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ friends: [
         href: "https://space.bilibili.com/14706181/#/video"
     },{
         title: "NetEase Music",
-        href: "https://music.163.com/#/playlist?id=517171111/"
+        href: "https://music.163.com/#/playlist?id=517171111"
     },{
         title: "Weibo",
         href: "https://weibo.com/1773645060/profile?topnav=1"
@@ -96,6 +96,6 @@ friends: [
         href: "https://www.instagram.com/94pan/"
     },{
         title: "Wechat",
-        href: "http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg/"
+        href: "http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg"
     }
 ]
