--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: HB Blog
 SEOTitle: HoiBan Blog
 header-img: img/fm/01.jpg
 email: 1500882048@qq.com
-description: "关于前端与设计、黑客与画家 | 黄玄，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界。"
+description: "即使輸掉一切，也不要輸掉微笑：）"
 keyword: "海斌, HB海斌, HB, HoiBan"
 url: "https://github.com/hbpoon/hbpoon.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
