--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ service-worker: true
 
 
 # Social   
-Friends: [
+Social : [
     {
         title: "Bilibili",
         href: "https://space.bilibili.com/14706181/#/video"
